material/03_ingress/ingress-basic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
spec:
  rules:
    - host: christian.rancher-k8s.cronn.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: demo-app-service-clusterip
                port:
                  number: 8080
